# ghostty-workspace

./: .gitignore  CLAUDE.md  README.md  example.yaml  ghostty-workspace.py  pyproject.toml  test_ghostty_workspace.py  test_gws_cli.py
ghostty_workspace/: __init__.py  cli.py  core.py  legacy.py  registry.py
