[build-system]
requires = ["setuptools==69.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostty-workspace"
version = "0.2.0"
description = "Declarative Ghostty workspace launcher and manager"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "ghostty-workspace contributors"}]
dependencies = ["PyYAML==6.0.3"]

[project.scripts]
gws = "ghostty_workspace.cli:main"
ghostty-workspace = "ghostty_workspace.legacy:main"

[tool.setuptools]
packages = ["ghostty_workspace"]
